test/Fail/Issue3566.err
Issue3566.agda:13.8-11: error: [UnequalTypes]
The type
  (r : R) → P (R.a r)
is not a subtype of
  A
when checking that the expression R.b has type A
